DONE header sec1 sec2 (but not responsive yet)

--- a/style.css
+++ b/style.css
@@ -34,17 +34,22 @@ body {
 .container {
 	width: 60%;
 	margin: 0 auto;
-	position: relative;
+	position: relative; /*** 1 ***/
+	border: 4px solid blue;
 }
 
-.highlightColor{
+.highlightColor {
 	color: #f03;
+}
+
+.highlightColorDark {
+	color: #c03;
 }
 
 /*#############################################*/
 
 header {
-	padding: 15px;
+	padding: 10px 0;
 	background-color: #222;
 }
 
@@ -53,8 +58,8 @@ header {
 }
 
 .logo-text {
-	position: absolute;
-	left: 40px;
+	position: absolute; /*** 1 ***/
+	left: 38px;
 	top: 50%;
 	transform: translateY(-50%);
 	font-family: LG, Haettenschweiler, Impact, sans-serif;
@@ -68,27 +73,107 @@ header {
 main {
 	background-image: url("./images/bg.png");
 	background-repeat: repeat-x;
-	background-color: #eee;
-	padding: 15px;
+	background-color: #fff;
 }
 
-.main-title {
+.pag1 {
+	display: inline-block;
+	width: 50%;
+	padding: 10px 0;
+}
+
+.pag1-title {
 	font-family: LG, Haettenschweiler, Impact, sans-serif;
 	font-weight: 100;
 	font-size: 72px;
 	color: #eee;
 }
 
-.main-subtitle {
+.pag1-subtitle {
 	font-family: Livory, 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	font-weight: 100;
-	font-size: 22px;
+	font-size: 20px;
 	color: #eee;
 	font-style: italic;
 }
 
 .devices-img {
 	margin-top: 50px;
+}
+
+/*#############################################*/
+
+.pag2 {
+	float: right;
+	width: 50%;
+	padding: 10px;
+}
+
+.pag2-form {
+	width: 450px;
+	padding: 20px;
+	border-radius: 2px;
+	background-color: #fff;
+	border: 2px solid #222;
+}
+
+.pag2-form h2 {
+	margin-bottom: 15px;
+	font-family: Livory, 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+	font-size: 24px;
+	text-align: center;
+	letter-spacing: 1px;
+}
+
+.pag2-form label {
+	display: inline-block;
+	margin: 5px 0;
+	font-family: 'Trebuchet MS',  Helvetica, Arial, sans-serif;
+	font-weight: 600;
+	font-size: 14px;
+	color: #444;
+}
+
+.userInput {
+	width: 100%;
+	margin-bottom: 15px;
+	padding: 8px;
+	border: 1px solid #aaa;
+	border-radius: 3px;
+	font-family: 'Trebuchet MS',  Helvetica, Arial, sans-serif;
+}
+
+.userInput:focus, .userInput:active {
+	outline: none;
+	border: 1px solid #c03;
+	box-shadow: 0 0 3px #c03;
+}
+
+.userInput:hover {
+	outline: none;
+	border: 1px solid #c03;
+}
+
+.button {
+	display: block;
+	margin: 20px auto 0px auto;
+	padding: 15px;
+	font-family: 'Trebuchet MS',  Helvetica, Arial, sans-serif;
+	font-weight: 600;
+	font-size: 20px;
+	color: #eee;
+	text-shadow: 1px 1px 0 #000;
+	background-color: #f03;
+}
+
+.button:hover {
+	box-shadow: 0 0 5px  #f03;
+	cursor: pointer;
+}
+
+.button:active {
+	color: #ddd;
+	background-color: #c03;
 }
 
 /*#############################################*/
