FINISHED desktop mode

--- a/style.css
+++ b/style.css
@@ -147,16 +147,14 @@ main {
 
 .userInput:hover {
 	outline: none;
-	border: 1px solid #f03;
+	border: 1px solid #c03;
 }
 
 .userInput:focus, .userInput:active {
 	outline: none;
-	border: 1px solid #f03;
-	box-shadow: 0 0 3px #f03;
+	border: 1px solid #c03;
+	box-shadow: 0 0 2px #c03;
 }
-
-
 
 .button {
 	display: block;
@@ -183,13 +181,14 @@ main {
 /*#############################################*/
 
 .page3 {
-	padding: 10px 0px;
+	padding: 40px 0 0 0; 
 	text-align: center;
 }
 
 .page3 h2 {
 	width: 500px;
 	margin: 0 auto;
+	color: #444;
 }
 
 .info {
@@ -205,7 +204,18 @@ main {
 
 
 footer {
-	padding: 15px;
-	background-color: #222;
+	padding: 40px 0;
+	font-family: Livory, 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+	font-weight: 100;
+	text-align: center;
 	color: #eee;
+	background-color: #444;
+
+}
+
+footer a {
+	font-size: 18px;
+	font-weight: 600;
+	text-decoration: underline;
+	color: #fff;
 }
