--- a/style.css
+++ b/style.css
@@ -36,8 +36,6 @@ body {
 	margin: 0 auto;
 	position: relative; /*** 1 ***/
 	overflow: hidden;
-
-	/* border: 3px solid blue; */
 }
 
 h2 {
@@ -200,8 +198,8 @@ main {
 	font-size: 16px;
 
 }
-/*#############################################*/
 
+/*#############################################*/
 
 footer {
 	padding: 40px 0;
@@ -218,4 +216,22 @@ footer a {
 	font-weight: 600;
 	text-decoration: underline;
 	color: #fff;
+}
+
+/*#############################################*/
+
+@media (max-width: 1249px) {
+	.container{
+		width: 970px;
+	}
+
+	.page1-title {
+		font-size: 57px;
+	}
+
+	.devices-img {
+		margin-top: 70px;
+		width: 90%;
+	}
+
 }
