--- a/style.css
+++ b/style.css
@@ -179,20 +179,20 @@ main {
 /*#############################################*/
 
 .page3 {
-	padding: 40px 0 0 0; 
+	padding: 30px 0 0 0; 
 	text-align: center;
 }
 
 .page3 h2 {
 	width: 500px;
-	margin: 0 auto;
+	margin: 10px auto;
 	color: #444;
 }
 
 .info {
 	display: inline-block;
-	width: 25%;
-	margin: 30px 30px;
+	width: 30%;
+	margin: 30px 10px;
 	font-family: 'Trebuchet MS',  Helvetica, Arial, sans-serif;
 	color: #444;
 	font-size: 16px;
@@ -220,9 +220,9 @@ footer a {
 
 /*#############################################*/
 
-@media (max-width: 1249px) {
-	.container{
-		width: 970px;
+@media (max-width: 1250px) {
+	.container {
+		width: 950px;
 	}
 
 	.page1-title {
@@ -231,7 +231,36 @@ footer a {
 
 	.devices-img {
 		margin-top: 70px;
-		width: 90%;
+		width: 95%;
 	}
 
+	.page2-form {
+		width: 385px;
+	}
+}
+
+
+@media (max-width: 1024px) {
+
+	.container {
+		width: 750px;
+	}
+
+	.page1{
+		width: 100%;
+	}
+
+	.devices-img {
+		margin-top: 50px;
+		width: 70%;
+	}
+
+	.page2 {
+		float: none;
+		width: 100%;
+	}
+	
+	.page2-form {
+		width: 750px;
+	}
 }
